<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etPosto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/Posto_de_Combust_vel"
        android:hint="@string/Posto_de_Combust_vel"
        android:inputType="text"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/etLitros"
        app:layout_constraintEnd_toEndOf="@+id/etLitros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLitros"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/Litros"
        android:hint="@string/Litros"
        android:inputType="number"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/etValor"
        app:layout_constraintEnd_toEndOf="@+id/etValor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPosto" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="1dp"
        android:autofillHints="@string/Valor"
        android:hint="@string/Valor"
        android:inputType="number"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/etKm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLitros" />

    <EditText
        android:id="@+id/etKm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/Km"
        android:hint="@string/Km"
        android:inputType="number"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdicionar"
        app:layout_constraintEnd_toEndOf="@+id/btnAdicionar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValor" />

    <Button
        android:id="@+id/btnAdicionar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/ADICIONAR"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/etKm" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="378dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="140dp"
        android:text="@string/KML"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>